test/good/automatic/extension/class/without_input/ret_zero/0024.lat
class a {
  int a;

  int getMe() {
    return 10;
  }
}

class except extends a {

  int getMe() {
    error();
  }
}

int main() {
  a a = new a;
  a.getMe();
  return 0;
}
