test/bad/automatic/extension/class/compile_time/0016.lat
class self {
  int andrzej;
}

int main() {
  self janusz = new self;
  return janusz.andrzej;
}
